<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/my_friend_background_img"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="match_parent" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:fitsSystemWindows="true"
        android:id="@+id/appBar"
        android:background="#0000"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <android.support.design.widget.CollapsingToolbarLayout
            android:fitsSystemWindows="true"
            android:id="@+id/my_friend_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/friend_info_icon"
                app:layout_collapseMode="parallax"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/friend_info_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <Button
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:textColor="@color/colorWhite"
                    android:layout_marginRight="10dp"
                    android:text="保存"
                    app:layout_collapseMode="pin"
                    android:layout_gravity="end"
                    android:background="@null"
                    android:id="@+id/save_note_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:background="#8fff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
           android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:text="@string/account"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/friend_account"
                    android:layout_marginLeft="20dp"
                    android:textColor="#022"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:text="@string/nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="@string/nick_name_default"
                    android:id="@+id/friend_nick_name"
                    android:layout_marginLeft="20dp"
                    android:textColor="#666"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:text="@string/note"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <EditText
                    android:background="@null"
                    android:maxLines="1"
                    android:hint="@string/note_default"
                    android:id="@+id/friend_note"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:text="@string/age"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="@string/age_default"
                    android:id="@+id/friend_age"
                    android:layout_marginLeft="20dp"
                    android:textColor="#666"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:text="@string/sex"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="@string/sex_default"
                    android:id="@+id/friend_sex"
                    android:layout_marginLeft="20dp"
                    android:textColor="#666"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:text="@string/telephone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="@string/telephone_number_default"
                    android:id="@+id/friend_tel"
                    android:layout_marginLeft="20dp"
                    android:textColor="#666"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:text="@string/address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="@string/address_default"
                    android:id="@+id/friend_address"
                    android:layout_marginLeft="20dp"
                    android:textColor="#666"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:text="@string/profession"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="@string/profession_default"
                    android:id="@+id/friend_profession"
                    android:layout_marginLeft="20dp"
                    android:textColor="#666"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <Button
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="删除聊天信息"
                android:id="@+id/delete_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null" />
            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <Button
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:id="@+id/delete_friend"
                android:text="删除该好友"
                android:textColor="#ff0000"
                android:background="@null"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="#dcdcdc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>